# circassiandna-chatbot

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  Dockerfile  Makefile  README.md  api-tests.html  app.py  chatbot-widget-global-web.php  combine_jsons.py  config.html  data.html  deployment.html  deps.html  genindex.html  index.html  infra.html  kb.json  knowledgebase.json  lambda_handler.py  objects.inv  project-structure.html  pyproject.toml  python.html  quickstart.html  requirements-dev.txt  requirements-docs.txt  requirements-lambda.txt  requirements.txt  search.html  searchindex.js  serverless.yml  sitemap.xml  test-event-v1-post.json  test-event-v2.json  utils.py  validate-json.sh  web-integration.html  (+1 more)
.doctrees/: api-tests.doctree  config.doctree  data.doctree  deployment.doctree  deps.doctree  environment.pickle  index.doctree  infra.doctree  project-structure.doctree  python.doctree  quickstart.doctree  web-integration.doctree  web.doctree
.github/workflows/: ci.yml  deploy-docs-json.yml  deploy-docs.yml  docs.yml  json.yml  lint.yml  makefile.yml  pre-commit.yml  release.yml
_sources/: config.rst.txt  infra.rst.txt
_static/: code.css
data/en/: archeology_en.json  base_en.json  ftdna_en.json  hg_en.json  history_en.json  miscellaneous_en.json  projects_en.json
data/ru/: archeology_ru.json  base_ru.json  ftdna_ru.json  genealogy_ru.json  hg_ru.json  history_ru.json  order_ru.json  (+3 more)
kb/: knowledgebase.json
source/: conf.py  index.rst
static/: chat-widget.js  style.css
templates/: index.html
tests/: test_app.py
(+13 files in other folders)
